--- a/prices.html
+++ b/prices.html
@@ -74,22 +74,44 @@
                             </ul>
                             <div class="page-name">
                                 <div class="section-title">Тарифы</div>
-                                <ul class="services">
+                                <ul class="services cleadfix">
                                     <li class="services__item">
                                         <div class="first-tarif">
                                             <img src="./img/prices/tariff 1.png" class="first-tarif__img">
-                                            <div class="first-tarif__text">
-                                            </div>
+                                            <div class="tarif__text">
+                                                «ОДИН»
+                                            </div> 
                                         </div>
+                                            <div class="tarif__title">
+                                                800 руб/мес или 100 руб/сутки
+                                            </div>
+                                            <div class="tarif__info">
+                                                Оплачивается рабочее место на 1 человека. Есть возможность оплаты с привязкой к определенному физическому месту. При оплате за год, скидка 30%.
+                                            </div>
                                         <div class="second-tarif">
                                             <img src="./img/prices/tariff 2.png" class="second-tarif__img">
+                                                <div class="tarif__text">
+                                                    <div class="tarif-desk">«Трое»</div>
+                                                </div>
                                         </div>
+                                        <div class="tarif__title">
+                                                1 500 руб/мес или 200 руб/сутки
+                                            </div>
+                                            <div class="tarif__info">
+                                                Оплачивается стол на 3 рабочих места. При этом можно ими пользоваться как одновременно, так и поочередно. Можно пользоваться офисной техникой и выделенным шкафом для документов.
+                                            </div>
                                         <div class="third-tarif">
                                             <img src="./img/prices/tariff 3.png" class="third-tarif__img">
                                                 <div class="tarif__text">
                                                     <div class="tarif-desk">10-10</div>
                                                 </div>
                                         </div>
+                                            <div class="tarif__title">
+                                                    10 000 руб/мес
+                                            </div>
+                                            <div class="tarif__info">
+                                                Оплачивается 10 рабочих мест на любые 10 дней месяца. Отлично подходит для периодической работы команды сотрудников без строгой привязки к рабочему месту. При оплате на год вперед скидка 25%
+                                            </div>
                                         <div class="fourth-tarif">
                                             <img src="./img/prices/tariff 4.png" class="fourth-tarif__img">
                                                 <div class="tarif__text">
@@ -105,9 +127,32 @@
                                             </div>
                                         <div class="fifth-tarif">
                                             <img src="./img/prices/tariff 5.png" class="fifth-tarif__img">
+                                                <div class="tarif__text">
+                                                    <div class="text-VIP">VIP</div>
+                                                        <div class="tarif-desk">«Все включено»</div>
+                                                </div>        
                                         </div>
+                                            <div class="tarif__title">
+                                                Цена рассчитывается индивидуально
+                                            </div>
+                                            <div class="tarif__info">
+                                                Оплачивается необходимое число рабочих мест с привязкой к фактическому местонахождению. В стоимость включены рабочие столы, мебель для хранения документов, отдельный принтер и копировальный автомат. 
+                                            </div>
                                         <div class="sixth-tarif">
                                             <img src="./img/prices/tariff 6.png" class="sixth-tarif__img">
+                                                <div class="tarif__text">
+                                                    <div class="tarif-desk">«Переговоры»</div>
+                                                </div>
+                                        </div>
+                                            <div class="tarif__title">
+                                                900 руб/час
+                                            </div>
+                                            <div class="tarif__info">
+                                                Есть возможность раннего бронирования конференц-залов со скидкой до 30% при полной предоплате.
+                                            </div>
+
+
+
                                         </div>
                                     </li>
                                 </ul>
@@ -118,7 +163,7 @@
         <footer class="footer">
             <div class="container">
                <div class="footer__col">
-                <ul class="footer__text">
+            <ul class="footer__text">
                 <li>Сделано с любовью и старанием </li>
                 <li>на курсе «HTML + CSS» в LoftSchool.</li>
                 <li>Автор работы: Прохладов Вадим</li>
