--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <h1>
                                     Что мы предлагаем:
                                 </h1>
-                                <ul>
+                                <ul class="page-list">
                                     <li>
                                         Огромный конференц-зал на 120 человек для проведения массовых переговоров, праздников, совещаний.
                                     </li>
@@ -113,32 +113,32 @@
                                         <ul class="partners__list clearfix">
                                             <li class="partners__item">
                                                 <a  href="a" class="partners__link">
-                                                    <img src="./img/partners/winter.png" alt="" class="partners__image partners__image-winter">
+                                                    <img src="./img/partners/winter color.png" alt="" class="partners__image partners__image-winter">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/tishkin.png" alt="" class="partners__image partners__image-tishkin">
+                                                    <img src="./img/partners/drop color.png" alt="" class="partners__image partners__image-tishkin">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item-right">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/drop.png" alt="" class="partners__image partners__image-drop">
+                                                    <img src="./img/partners/Ann.png" alt="" class="partners__image partners__image-drop">
                                                 </a>
                                             </li>
                                             <li class="partners__item">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/pufok.png" alt="" class="partners__image partners__image-pufok">
+                                                    <img src="./img/partners/tishkin color.png" alt="" class="partners__image partners__image-pufok">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/Ann.png" alt="" class="partners__image partners__image-Ann">
+                                                    <img src="./img/partners/pufok color.png" alt="" class="partners__image partners__image-Ann">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/Avalanche.png" alt="" class="partners__image partners__image-Avalanche">
+                                                    <img src="./img/partners/Avalanche color.png" alt="" class="partners__image partners__image-Avalanche">
                                                 </a>
                                             </li>
                                         </ul>
